--- a/src/components/article/article.css
+++ b/src/components/article/article.css
@@ -7,8 +7,55 @@
     background: var(--color-footer);
 }
 
-.blog__container-article-image{
+.blog__container-article-image {
     width: 100%;
     height: 100%;
     background: var(--color-footer)
+}
+
+.blog__container-article-image img {
+    width: 100%;
+    height: 100%;
+}
+
+.blog__container-article-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    padding: 1rem 1rem;
+}
+
+.blog__container-article-content p {
+    font-family: var(--font-family);
+    font-style: normal;
+    font-size: 11.649px;
+    font-weight: bold;
+    line-height: 35px;
+
+    color: #fff;
+
+}
+
+.blog__container-article-content h3 {
+    font-family: var(--font-family);
+    font-style: normal;
+    font-weight: 800;
+    font-size: 25.11px;
+    line-height: 30px;
+    margin-bottom: 5rem;
+    cursor: pointer;
+
+    color: #fff;
+}
+
+.blog__container-article-content p:last-child {
+    cursor: pointer;
+}
+
+@media screen and (max-width: 550px) {
+    .blog__container-article-content h3 {
+        font-size: 18px;
+        line-height: 25px;
+    }
 }
