--- a/src/containers/footer/footer.css
+++ b/src/containers/footer/footer.css
@@ -67,6 +67,7 @@
 .footer__links-logo {
     display: flex;
     flex-direction: column;
+    flex: 1;
 }
 
 .footer__links-logo img {
@@ -87,6 +88,7 @@
     display: flex;
     justify-content: flex-start;
     flex-direction: column;
+    margin-left: 0 0 0 1rem;
 }
 
 .footer__links-div h4 {
